--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App Test 1</h1>
+    <h1>Vanilla JavaScript App Test</h1>
     <form action="database.php" method="post">
       <p>
           <label for="KSU Student ID">KSU Student ID (9-digit):</label>
